# gradient-boosting-from-scratch

./: .gitignore  README.md  pyproject.toml
gradient_boosting_from_scratch/: __init__.py  _gb.py  _losses.py  _utils.py  base.py  classifier_binary.py  classifier_multiclass.py  regressor.py
gradient_boosting_from_scratch.egg-info/: SOURCES.txt  top_level.txt
gradient_boosting_from_scratch/testing/: data_synthetic_classification.csv  data_synthetic_classification_binary.csv  data_synthetic_regression.csv  synthetic_data_creation.py  synthetic_data_generator.py  testing_clf.py  testing_clf_binary.py  testing_data_clf.csv  testing_data_reg.csv  testing_reg.py
src/gradient_boosting_from_scratch.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
