[project]
name = "gradient-boosting-from-scratch"
version = "0.0.1"
authors = [
  { name="Rafael Ayllón Gavilán", email="rafaaylloningeniero@gmail.com" },
]
description = "A python implementation of a gradient boosting machine"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/RafaAyGar/gradient-boosting-from-scratch"
Issues = "https://github.com/RafaAyGar/gradient-boosting-from-scratch/issues"
